01 feature-fix: create jwt token for user

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,6 @@ spring.jpa.generate-ddl = true
 spring.jpa.show-sql = false
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.hikari.maximumPoolSize=10
+
+jwt.secret=javaexample
+server.error.include-message=always
